full width colour sections

--- a/art-week-stories/index.html
+++ b/art-week-stories/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<div class="back5" style="border: 2px solid white; margin-top: 20px">
-	
-	<p>This page has moved, please click through to <a href="/events/2014/artweek-stories/">Choose our own Adventure</a></p>
-
+		<div class="container">
+			<p>This page has moved, please click through to <a href="/events/2014/artweek-stories/">Choose our own Adventure</a></p>
+		</div>
 	</div>
 </body>
