--- a/index.html
+++ b/index.html
@@ -9,34 +9,38 @@
 </head>
 <body>
 <div class="back1">
-	<h1>THE POP-UP<br>GAMES ARCADE</h1>
-  <p class="subheading">Strange videogames by local creatives</p>
+  <div class="container">
+  	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+    <p class="subheading">Strange videogames by local creatives</p>
+  </div>
 </div>
 <div class="back2">
-  <p class="subheading">Coming Soon</p>
-
-  <img class="framed" src="/img/popup_redecorating.jpg">
-    <p>No events confirmed at the moment. Stay tuned…</p>
-
+  <div class="container">
+    <p class="subheading">Coming Soon</p>
+    <img class="framed" src="/img/popup_redecorating.jpg">
+      <p>No events confirmed at the moment. Stay tuned…</p>
+    </div>
 </div>
 <div class="back3">
-
-  <h2 id="aboutus">About Us</h2>
-    <div>
-      <div class="navlist"><img class="portrait" src="/img/alice.jpg"><br>Alice</div> 
-      <div class="navlist"><img class="portrait" src="/img/kate.jpg"><br>Kate</div>
-      <div class="navlist"><img class="portrait" src="/img/matthew.jpg  "><br>Matthew</div>
-    </div>
-  <p>
-    We build and run a DIY games arcade, showing home-made games by people from around New Zealand.
-  </p>
-  <img class="framed" src="img/popup_colors.jpg">
-  <p>
-    Making games is fun, and we encourage people to try. You don't need special skills or superpowers. <a href="/making/">Learn more about making games here</a>.
-  </p>
+  <div class="container">
+    <h2 id="aboutus">About Us</h2>
+      <div>
+        <div class="navlist"><img class="portrait" src="/img/alice.jpg"><br>Alice</div> 
+        <div class="navlist"><img class="portrait" src="/img/kate.jpg"><br>Kate</div>
+        <div class="navlist"><img class="portrait" src="/img/matthew.jpg  "><br>Matthew</div>
+      </div>
+    <p>
+      We build and run a DIY games arcade, showing home-made games by people from around New Zealand.
+    </p>
+    <img class="framed" src="img/popup_colors.jpg">
+    <p>
+      Making games is fun, and we encourage people to try. You don't need special skills or superpowers. <a href="/making/">Learn more about making games here</a>.
+    </p>
+  </div>
 </div>
 <div class="back4">
-  <h2 id="stayintouch">Stay in Touch</h2>
+  <div class="container">
+    <h2 id="stayintouch">Stay in Touch</h2>
 
 <!-- Begin MailChimp Signup Form -->
 <div class="mc_embed_signup">
@@ -62,32 +66,35 @@
 
 <p>Other ways to get in touch:</p>
 
-  <p>
-    <a class="navlist" href="https://www.facebook.com/popuparcade">Facebook</a>
-    <a class="navlist" href="https://twitter.com/popup_arcade">Twitter</a>
-    <a class="navlist" href="mailto:popuparcade+site@gmail.com">Email us</a>
-  </p>
+    <p>
+      <a class="navlist" href="https://www.facebook.com/popuparcade">Facebook</a>
+      <a class="navlist" href="https://twitter.com/popup_arcade">Twitter</a>
+      <a class="navlist" href="mailto:popuparcade+site@gmail.com">Email us</a>
+    </p>
+  </div>
 </div>
 <div class="back5">
-  <h2 id="pastevents">Past Events</h2>
-  <h3>2014</h3>
-  <ul>
-    <li><a href="/events/2014/artweek-stories/">Choose Our Own Adventure</a></li>
-    <li><a href="/events/2014/young-and-hungry/">Young &amp; Hungry</a></li>
-    <li><a href="/events/2014/birkenhead-library/">Birkenhead Library</a></li>
-    <li><a href="/events/2014/new-lynn-library/">New Lynn Library</a></li>
-    <li><a href="/events/2014/monster-valley-experiment/">Monster Valley Experiment</a></li>
-    <li><a href="/events/2014/first-thursdays-secret-hq/">First Thursdays Secret HQ</a></li>
-  </ul>
-  <h3>2013</h3>
-  <ul>
-    <li><a href="/events/2013/first-thursdays-fiesta/">First Thursdays Fiesta</a></li>
-    <li><a href="/events/2013/auckland-art-gallery/">Big Day Art:Play! at the Auckland Art Gallery</a></li>
-    <li><a href="/events/2013/bread-and-butter-letter/">Pop-Up Arcade Launch at the Bread and Butter Letter</a></li>
-    <li><a href="/events/2013/gather/">Pop-Up Arcade test run at Gather</a></li>
-  </ul>
+  <div class="container">
+    <h2 id="pastevents">Past Events</h2>
+    <h3>2014</h3>
+    <ul>
+      <li><a href="/events/2014/artweek-stories/">Choose Our Own Adventure</a></li>
+      <li><a href="/events/2014/young-and-hungry/">Young &amp; Hungry</a></li>
+      <li><a href="/events/2014/birkenhead-library/">Birkenhead Library</a></li>
+      <li><a href="/events/2014/new-lynn-library/">New Lynn Library</a></li>
+      <li><a href="/events/2014/monster-valley-experiment/">Monster Valley Experiment</a></li>
+      <li><a href="/events/2014/first-thursdays-secret-hq/">First Thursdays Secret HQ</a></li>
+    </ul>
+    <h3>2013</h3>
+    <ul>
+      <li><a href="/events/2013/first-thursdays-fiesta/">First Thursdays Fiesta</a></li>
+      <li><a href="/events/2013/auckland-art-gallery/">Big Day Art:Play! at the Auckland Art Gallery</a></li>
+      <li><a href="/events/2013/bread-and-butter-letter/">Pop-Up Arcade Launch at the Bread and Butter Letter</a></li>
+      <li><a href="/events/2013/gather/">Pop-Up Arcade test run at Gather</a></li>
+    </ul>
 
-  <p><a href="/games/">See all the games we've ever shown</a></p>
+    <p><a href="/games/">See all the games we've ever shown</a></p>
+  </div>
 </div>
  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
