--- a/making/index.html
+++ b/making/index.html
@@ -8,22 +8,15 @@
 </head>
 <body>
 <div class="back4">
-	<div class="section">
+	<div class="container">
 		<p class="smallprint"><a href="/">Click here to return to our home page.</a></p>
-	</div>
-	<div class="section">
 		<h1>The Pop-Up Guide to Making Games</h1>
-	</div>
-
-	<div class="section">
-
 		<p>There are lots of great tools to help you get started making games.</p>
-
 		<p>Here are some of our favourites:</p>
 	</div>
 </div>
 <div class="back5">
-	<div class="section">
+	<div class="container">
 	<ul>
 		<li><a href="http://scratch.mit.edu/">Scratch</a> – make simple stories, games and animations.</li>
 		<li><a href="">Twine</a> – make interactive stories. This is a great place to start if you like writing.</li>
