--- a/index.html
+++ b/index.html
@@ -16,10 +16,22 @@
 </div>
 <div class="back2">
   <div class="container">
-    <p class="subheading">Coming Soon</p>
-    <img class="framed" src="/img/popup_redecorating.jpg">
-      <p>No events confirmed at the moment. Stay tuned…</p>
+
+
+    <p class="subheading">next event:</p>
+    <h2>First Thursdays Arcade</h2>
+    <img class="framed" src="/img/camera-and-story.jpg">
+    <div class="caption">Space Ribbon |
+      Attack of the Meeplings |
+      $13 Game |
+      Choose our own Adventure |
+      Reality Reality
     </div>
+    <p>Thursday 4th December</p>
+    <p>6 PM – 9 PM</p>
+    <p>Cross Street Arcade<br>214 Karagahape Road<br>Auckland</p>
+
+  </div>
 </div>
 <div class="back3">
   <div class="container">
