Update event description and photo

--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
   <div class="container">
 
 
-    <p class="subheading">next event:</p>
-    <h2>First Thursdays Arcade</h2>
-    <img class="framed" src="/img/camera-and-story.jpg">
-    <div class="caption">Space Ribbon |
+    <p class="subheading">Pop-Up Arcade presents:</p>
+    <h2>Arcade Arcade</h2>
+    <img class="framed" src="/img/space-ribbon-garage.jpg">
+    <div class="caption" style="color: rgb(86, 86, 86);">Space Ribbon |
       Attack of the Meeplings |
       $13 Game |
       Choose our own Adventure |
       Reality Reality
     </div>
-    <p>Thursday 4th December</p>
-    <p>6 PM – 9 PM</p>
-    <p>Cross Street Arcade<br>214 Karagahape Road<br>Auckland</p>
+    <p><b>Thursday 4th December</b></h3>
+    <p><b>6 PM – 9 PM</b></p>
+    <p><b>Cross Street Arcade<br>214 Karagahape Road<br>Auckland</b></p>
+
+    <p>Join us for our biggest arcade ever!</p>
 
   </div>
 </div>
