--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
     <p>
       We build and run a DIY games arcade, showing home-made games by people from around New Zealand.
     </p>
-    <img class="framed" src="img/popup_colors.jpg">
     <p>
-      Making games is fun, and we encourage people to try. You don't need special skills or superpowers. <a href="/making/">Learn more about making games here</a>.
+      You can make games too! <a href="/making/">Click here to learn about game-making</a>.
     </p>
   </div>
 </div>
@@ -56,35 +55,44 @@
   <div class="container">
     <h2 id="stayintouch">Stay in Touch</h2>
 
-<!-- Begin MailChimp Signup Form -->
-<div class="mc_embed_signup">
-<form action="http://popuparcade.us3.list-manage.com/subscribe/post?u=da3411c1060122b316eab2634&amp;id=2f217db60f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-  
-<div>
-  <p>Sign up to hear about our next arcade!</p>
-  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address"><br>
-  <input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="Your name"><br>
-    <input type="checkbox" value="1" name="group[5853][1]" id="checkbox">
-    <label for="checkbox">Also tell me about DIY game-making workshops</label>
-  <div id="mce-responses" class="clear">
-    <div class="response" id="mce-error-response" style="display:none"></div>
-    <div class="response" id="mce-success-response" style="display:none"></div>
-  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_da3411c1060122b316eab2634_2f217db60f" value=""></div>
-  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-</div>
-</form>
-</div>
-
-<!--End mc_embed_signup-->
-
-<p>Other ways to get in touch:</p>
+    <p>Want to know what's happening next?</p>
 
     <p>
       <a class="navlist" href="https://www.facebook.com/popuparcade">Facebook</a>
       <a class="navlist" href="https://twitter.com/popup_arcade">Twitter</a>
       <a class="navlist" href="mailto:popuparcade+site@gmail.com">Email us</a>
     </p>
+
+<!-- Begin MailChimp Signup Form -->
+<div id="mc_embed_signup">
+<form action="//popuparcade.us3.list-manage.com/subscribe/post?u=da3411c1060122b316eab2634&amp;id=2f217db60f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+  <h3>Get the Newsletter</h3>
+  <p>We'll email you before our next arcade.</p>
+<div class="mc-field-group">
+  <label for="mce-EMAIL">Email </label>
+  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+  <label for="mce-FNAME">Name </label>
+  <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+</div>
+<div class="clear">
+  <div class="mc-field-group input-group">
+      <input type="checkbox" value="1" name="group[5853][1]" id="mce-group[5853]-5853-0"><label for="mce-group[5853]-5853-0">Also tell me about game-making workshops</label>
+  </div>
+</div>
+  <div id="mce-responses" class="clear">
+    <div class="response" id="mce-error-response" style="display:none"></div>
+    <div class="response" id="mce-success-response" style="display:none"></div>
+  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_da3411c1060122b316eab2634_2f217db60f" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
   </div>
 </div>
 <div class="back5">
