--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link href='http://fonts.googleapis.com/css?family=Pompiere' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/style/arcade.css" type="text/css" />
 <title>The Pop-Up Games Arcade</title>
@@ -10,7 +9,7 @@
 <body>
 <div class="back1">
   <div class="container">
-  	<h1>THE POP-UP<br>GAMES ARCADE</h1>
+  	<h1 class="sitetitle">THE POP-UP<br>GAMES ARCADE</h1>
     <p class="subheading">Strange videogames by local creatives</p>
   </div>
 </div>
