larger portraits, link hover color

--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
   <div class="container">
     <h2 id="aboutus">About Us</h2>
       <div>
-        <div class="navlist"><img class="portrait" src="/img/alice.jpg"><br>Alice</div> 
-        <div class="navlist"><img class="portrait" src="/img/kate.jpg"><br>Kate</div>
-        <div class="navlist"><img class="portrait" src="/img/matthew.jpg  "><br>Matthew</div>
+        <div class="third">
+          <img class="portrait" src="/img/alice.jpg">
+          <div class="portrait-caption">Alice</div>
+        </div> 
+        <div class="third"><img class="portrait" src="/img/kate.jpg"><br>Kate</div>
+        <div class="third"><img class="portrait" src="/img/matthew.jpg  "><br>Matthew</div>
+        <div class="clear"></div>
       </div>
     <p>
       We build and run a DIY games arcade, showing home-made games by people from around New Zealand.
