Click on image to view large image popover - some javascript to allow this

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <p class="subheading">Pop-Up Arcade presents:</p>
     <h2>Arcade Arcade</h2>
-    <img class="framed" src="/img/space-ribbon-garage.jpg">
+    <a href="/img/space-ribbon-garage.jpg" class="zoom"><img class="framed" src="/img/space-ribbon-garage.jpg"></a>
     <div class="caption" style="color: rgb(86, 86, 86);">Space Ribbon |
       Attack of the Meeplings |
       $13 Game |
@@ -121,6 +121,10 @@
     <p><a href="/games/">See all the games we've ever shown</a></p>
   </div>
 </div>
+<div class="fullscreenbackground">
+  <img class="fullscreenpic" src="/">
+</div>
+ <script src="/js/arcade.js"/>
  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
