Main logo is all faded and no longer angled. Better?

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="back1">
   <div class="container">
-  	<h1 class="sitetitle">THE POP-UP<br>GAMES ARCADE</h1>
+  	<h1 class="sitetitle"><span class="o1">TH</span><span class="o3">E</span> POP-<span class="o7">U</span>P<br><span class="o1">GA</span><span class="o3">ME</span><span class="o1">S</span> A<span class="o7">R</span>CADE</h1>
     <p class="subheading">Strange videogames by local creatives</p>
   </div>
 </div>
