Update Stencyl tutorial. Replace broken Explosion.mp3 asset, fix some broken links, delete unused pages

--- a/making/stencyl/index.html
+++ b/making/stencyl/index.html
@@ -27,9 +27,9 @@
 
 			<p>Download Stencyl from <a target="_blank" href="http://www.stencyl.com/download/">here</a>, and install it.</p>
 
-			<p>Download a .zip file with images and sounds for this guide by clicking <a href="assets.zip">here.</a></p>
+			<p>Download a .zip file with images and sounds for this guide by clicking <a href="invaders_assets.zip">here.</a></p>
 
-			<p>Extract the assets.zip to a location you will remember.</p>
+			<p>Extract the invaders_assets.zip to a location you will remember.</p>
 
 		</div>
 	</div>
@@ -102,7 +102,7 @@
 <p>
  <img alt="" src="./Crash Course 2  Invaders - Part 2 on Stencylpedia_files/CC2_image19.png" style="height: 400px; width: 640px;"></p>
 <p>
- We should have saved and extracted the example assets earlier somewhere on our computer, so we should navigate to that folder. We want to open the "Ship_flying.png" image for this Animation (if you still need to download the assets, <a href="assets.zip">click here to download them</a>).</p>
+ We should have saved and extracted the example assets earlier somewhere on our computer, so we should navigate to that folder. We want to open the "Ship_flying.png" image for this Animation (if you still need to download the assets, <a href="invaders_assets.zip">click here to download them</a>).</p>
 <p>
  <img alt="Ship_flying.png selected" src="./Crash Course 2  Invaders - Part 2 on Stencylpedia_files/ship_flying_selected.png" style="width: 571px; height: 424px;"></p>
 <p>
