--- a/making/stencyl/page3.html
+++ b/making/stencyl/page3.html
@@ -44,7 +44,7 @@
 <p>
  Step 46: Click the Choose Sound option and select the song we imported earlier.</p>
 <div class="tableWrapper" style="padding:10px;">
- <strong>Tip:</strong> Part 5 of this tutorial covers importing sounds. You can <a href="http://www.stencyl.com/help/viewArticle/175">read about importing sounds again here</a>.</div>
+ <strong>Tip:</strong> Part 5 of this tutorial covers importing sounds. You can <a href="page2.html">read about importing sounds again here</a>.</div>
 <p>
  <img alt="" src="./Crash Course 2  Invaders - Part 7 on Stencylpedia_files/image69.png"></p>
 <p>
