Show 2 new events

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 <div class="back2">
   <div class="container">
     <p class="subheading">Pop-Up Arcade presents:</p>
-    <h2>Arcade Arcade</h2>
+    <h2>Mystery Space Place</h2>
     <a href="/img/space-ribbon-garage.jpg" class="zoom"><img class="framed" src="/img/space-ribbon-garage.jpg"></a>
-    <div class="caption" style="color: rgb(86, 86, 86);">Space Ribbon |
-      Attack of the Meeplings |
-      $13 Game |
-      Choose our own Adventure |
-      Reality Reality
-    </div>
-    <p><b>Thursday 4th December</b></h3>
+    <p><b>Thursday 7th May</b></h3>
     <p><b>6 PM – 9 PM</b></p>
     <p><b>Cross Street Arcade<br>214 Karagahape Road<br>Auckland</b></p>
 
-    <p>Join us for our biggest arcade ever!</p>
+    <p>Pop-Up Arcade lands on a dangerous planet full of strange artifacts and alien videogames.</p>
+
+    <h2>Games at the Library #3</h2>
+    <img class="framed" src="/img/central-city-library-arcade.jpg">
+    <p><b>April 1 – April 31st</b></p>
+    <p><b>Central City Library,<br>44 - 46 Lorne Street,<br>Auckland</b></p>
+    <p>more details on <a href="/events/2015/central-city-library/">Games at the Library #3</a></p>
 
   </div>
 </div>
@@ -99,6 +99,11 @@
 <div class="back5">
   <div class="container">
     <h2 id="pastevents">Past Events</h2>
+    <h3>2015</h3>
+    <ul>
+      <li>Mystery Space Place</li>
+      <li><a href="/events/2015/central-city-library/">Central City Library</a></li>
+    </ul>    
     <h3>2014</h3>
     <ul>
       <li><a href="/events/2014/arcade-arcade/">Arcade Arcade</a></li>
