Add some photos to homepage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p><b>6 PM – 9 PM</b></p>
     <p><b>Cross Street Arcade<br>214 Karagahape Road<br>Auckland</b></p>
 
-    <p>Pop-Up Arcade lands on a dangerous planet full of strange artifacts and alien videogames.</p>
+    <p>Explore a dangerous planet full of strange artifacts and alien videogames.</p>
 
     <h2>Games at the Library #3</h2>
     <img class="framed" src="/img/central-city-library-arcade.jpg">
@@ -47,6 +47,23 @@
     <p>
       We build and run a DIY games arcade, showing home-made games by people from around New Zealand.
     </p>
+
+    <a href="/events/2014/arcade-arcade/arcade-arcade-3.jpg" class="zoom">
+      <img src="/events/2014/arcade-arcade/arcade-arcade-3-thumb.jpg" class="framed half">
+    </a>
+
+    <a href="/events/2014/arcade-arcade/arcade-arcade-5.jpg" class="zoom">
+      <img src="/events/2014/arcade-arcade/arcade-arcade-5-thumb.jpg" class="framed half">
+    </a>
+
+    <a href="/events/2014/arcade-arcade/arcade-arcade-19.jpg" class="zoom">
+      <img src="/events/2014/arcade-arcade/arcade-arcade-19-thumb.jpg" class="framed half">
+    </a>
+
+    <a href="/events/2014/arcade-arcade/arcade-arcade-1.jpg" class="zoom">
+      <img src="/events/2014/arcade-arcade/arcade-arcade-1-thumb.jpg" class="framed half">
+    </a>
+
     <p>
       You can make games too! <a href="/making/">Click here to learn about game-making</a>.
     </p>
