--- a/index.html
+++ b/index.html
@@ -13,22 +13,37 @@
     <p class="subheading">Strange videogames by local creatives</p>
   </div>
 </div>
-<div class="back2">
+<div class="back2" style="background-color: gray;">
+  <script>
+  var counter = 0;
+  var up = true;
+  function flash() {
+    if (up) {
+      counter++;  
+      if (counter > 35) up = false;
+    } else {
+      counter--;
+      if (counter < 0) up = true;
+    }
+    var num = 100 + counter;
+    document.querySelector(".back2").style.backgroundColor = "rgb(" + num + "," + num + "," + num + ")";
+  }
+  setInterval(flash, 40);
+  </script>
   <div class="container">
-    <p class="subheading">Pop-Up Arcade presents:</p>
-    <h2>Mystery Space Place</h2>
-    <a href="/img/space-ribbon-garage.jpg" class="zoom"><img class="framed" src="/img/space-ribbon-garage.jpg"></a>
-    <p><b>Thursday 7th May</b></h3>
-    <p><b>6 PM – 9 PM</b></p>
-    <p><b>Cross Street Arcade<br>214 Karagahape Road<br>Auckland</b></p>
+    <img class="framed" src="/img/mystery-starship-poster.jpg" alt="Pop-Up Arcade presents: Mystery Starship">
 
-    <p>Explore a dangerous planet full of strange artifacts and alien videogames.</p>
+    <p><b>strange video games + alien artefacts</b></p>
 
-    <h2>Games at the Library #3</h2>
-    <img class="framed" src="/img/central-city-library-arcade.jpg">
-    <p><b>April 1 – April 31st</b></p>
-    <p><b>Central City Library,<br>44 - 46 Lorne Street,<br>Auckland</b></p>
-    <p>more details on <a href="/events/2015/central-city-library/">Games at the Library #3</a></p>
+    <p style="text-align:left; display:inline-block; margin-left: auto; margin-right: auto; margin-bottom: 0; margin-top: 0;"><b>Thursday 15th October\\\\\\\3 PM–9 PM<br>
+    Friday 16th October\\\\\\\\\3 PM–9 PM<br>
+    Saturday 17th October\\\\\\\11 AM–2 PM, 3 PM–9 PM</b></p>
+
+    <p><b>Free entry</b></p>
+
+    <p><b>The Bread and Butter Letter<br>(in the basement)<br>225 Karagahape Road<br>Auckland</b></p>
+
+    <p><img class="framed" src="/img/cardboard-spaceship.jpg" title="What's inside?"></p>
 
   </div>
 </div>
@@ -118,7 +133,7 @@
     <h2 id="pastevents">Past Events</h2>
     <h3>2015</h3>
     <ul>
-      <li>Mystery Space Place</li>
+      <li><a href="/events/2015/mystery-space-place/">Mystery Space Place</a></li>
       <li><a href="/events/2015/central-city-library/">Central City Library</a></li>
     </ul>    
     <h3>2014</h3>
