Add latest events

--- a/index.html
+++ b/index.html
@@ -13,37 +13,35 @@
     <p class="subheading">Strange videogames by local creatives</p>
   </div>
 </div>
-<div class="back2" style="background-color: gray;">
-  <script>
-  var counter = 0;
-  var up = true;
-  function flash() {
-    if (up) {
-      counter++;  
-      if (counter > 35) up = false;
-    } else {
-      counter--;
-      if (counter < 0) up = true;
-    }
-    var num = 100 + counter;
-    document.querySelector(".back2").style.backgroundColor = "rgb(" + num + "," + num + "," + num + ")";
-  }
-  setInterval(flash, 40);
-  </script>
+<div class="back2">
   <div class="container">
-    <img class="framed" src="/img/mystery-starship-poster.jpg" alt="Pop-Up Arcade presents: Mystery Starship">
+    <p class="subheading">Pop-Up Arcade presents</p>
+    <h2>Britomart Arcade</h2>
 
-    <p><b>strange video games + alien artefacts</b></p>
+    <img class="framed" src="/img/space-ribbon-silver.jpg">
 
-    <p style="text-align:left; display:inline-block; margin-left: auto; margin-right: auto; margin-bottom: 0; margin-top: 0;"><b>Thursday 15th October\\\\\\\3 PM–9 PM<br>
-    Friday 16th October\\\\\\\\\3 PM–9 PM<br>
-    Saturday 17th October\\\\\\\11 AM–2 PM, 3 PM–9 PM</b></p>
+<p>Pop-Up Arcade are debuting at Britomart this summer!</p>
+
+<p>Opening hours:</p>
+<p><b>Thursday 4pm - 8pm<br>
+Friday 4pm - 8pm<br>
+Saturday 4pm - 8pm</b></p>
 
     <p><b>Free entry</b></p>
 
-    <p><b>The Bread and Butter Letter<br>(in the basement)<br>225 Karagahape Road<br>Auckland</b></p>
+    <p><b>60 Galway Street, Britomart, Auckland</b></p>
 
-    <p><img class="framed" src="/img/cardboard-spaceship.jpg" title="What's inside?"></p>
+<h2>PLUS! special events on Saturdays:</h2>
+
+<p><b>Saturday 12th | 8am - 1pm | Cardboard World</b></p>
+<p>Pop-Up Arcade have created a cardboard world, and need your help to bring it to life. An interactive installation where we encourage you to create, colour and play. Run as part of the Britomart Day Out from 8am until 1pm, and open to everyone.</p>
+
+<p><b>Saturday 19th | 4pm - 7pm | Scavenger Hunt</b></p>
+<p>Explore the hidden corners of Britomart to decode a secret message. Start the mission from Pop-Up Arcade any time between 4 PM and 7 PM. (Recommended for adults or families; children will need supervision as they cross roads and explore secluded spaces.)</p>
+
+    <p><img class="framed" src="/img/popup_britomart_cardboard.jpg" title="Kate helping to make a cardboard swing"></p>
+
+    <p>See you at Britomart!</p>
 
   </div>
 </div>
@@ -133,6 +131,8 @@
     <h2 id="pastevents">Past Events</h2>
     <h3>2015</h3>
     <ul>
+      <li>Britomart Arcade</li>
+      <li><a href="/events/2015/mystery-starship/">Mystery Starship</a></li>
       <li><a href="/events/2015/mystery-space-place/">Mystery Space Place</a></li>
       <li><a href="/events/2015/central-city-library/">Central City Library</a></li>
     </ul>    
