--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-707544-9"></script>
+<script>
+  window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} 
+  gtag('js', new Date()); gtag('config', 'UA-707544-9');
+</script>  
 <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/style/arcade.css" type="text/css" />
 <title>The Pop-Up Games Arcade</title>
@@ -160,16 +166,7 @@ Saturday 4pm - 8pm</b></p>
 <div class="fullscreenbackground">
   <img class="fullscreenpic" src="/">
 </div>
- <script src="/js/arcade.js"/>
- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-707544-9', 'popuparcade.co.nz');
-  ga('send', 'pageview');
-</script>
+<script src="/js/arcade.js"/>
 </body>
 </html>
  
